# after-black

./: .gitignore  .pre-commit-hooks.yaml  README.md  setup.cfg  setup.py
src/: after-black.py  after_black.py
